package main;

import static pattern.PatternImplementation.*;
public class Main {
    public static void main(String[] args) {
    new Facade().runProcess();
}
}
