package pattern;

public class StepA {
    public boolean check() {
        System.out.println("orden de compra: verificacion");
        return true;
    }
}
