package pattern;

public class StepB {
    public void execute() { System.out.println("orden de compra: ejecucion principal"); }
}
