package pattern;

public class StepC {
    public void finish() { System.out.println("orden de compra: cierre"); }
}
