@startuml
title Facade - Ejemplo 1 - Implementacion Generica
left to right direction
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #334155
  FontColor #0F172A
}
hide empty members

package "main" #EEF2FF {
  class Main <<cliente>>
}

package "pattern" #ECFDF5 {
  class Facade {
    +runProcess(): void
  }
  class StepA {
    +check(): boolean
  }
  class StepB {
    +execute(): void
  }
  class StepC {
    +finish(): void
  }
}

Facade ..> StepB : crea
Facade ..> StepC : crea
Facade ..> StepA : crea
StepA ..> StepB : crea
StepA ..> StepC : crea
StepB ..> StepC : crea
Main ..> Facade : ejecuta

note bottom
La implementacion esta concentrada en src/pattern/PatternImplementation.java.
Main solo instancia y ejecuta el caso de uso.
end note
@enduml
